--- a/Super Metroidvania 3Million/CrossPlatformDesktopProject/Super Metroidvania 5Million.csproj
+++ b/Super Metroidvania 3Million/CrossPlatformDesktopProject/Super Metroidvania 5Million.csproj
@@ -67,8 +67,8 @@
     <Compile Include="Libraries\Command\ICommand.cs" />
     <Compile Include="Game1.cs" />
     <Compile Include="Libraries\Command\UnusedCommands\PreviousItemCommand.cs" />
-    <Compile Include="Libraries\Command\SelectCommand.cs" />
-    <Compile Include="Libraries\Command\StartCommand.cs" />
+    <Compile Include="Libraries\Command\RestartCommand.cs" />
+    <Compile Include="Libraries\Command\QuitCommand.cs" />
     <Compile Include="Libraries\Container\GameObjectContainer.cs" />
     <Compile Include="Libraries\Controller\KeyboardController.cs" />
     <Compile Include="Libraries\SFactory\BlockSpriteFactory.cs" />
@@ -214,6 +214,7 @@
     <Compile Include="Libraries\Sprite\Map\MapInterface.cs" />
     <Compile Include="Libraries\Sprite\Map\MapSprite.cs" />
     <Compile Include="Libraries\Sprite\Player\PlayerInventory.cs" />
+    <Compile Include="Libraries\Sprite\Player\Samus.cs" />
     <Compile Include="Libraries\Sprite\Projectiles\KraidHorn.cs" />
     <Compile Include="Libraries\Sprite\Projectiles\KraidMissile.cs" />
     <Compile Include="Libraries\Sprite\Projectiles\ProjectileSprites\MissileRocketExplosionSprite.cs" />
@@ -229,12 +230,12 @@
     <Compile Include="Libraries\Sprite\Projectiles\ProjectileSprites\WaveBeamSprite.cs" />
     <Compile Include="Libraries\Sprite\Projectiles\WaveBeam.cs" />
     <Compile Include="Libraries\Sprite\Player\SamusStates\GameObjects\IPlayerState.cs" />
-	<Compile Include="Libraries\Sprite\Player\SamusStates\GameObjects\JumpLeftSamusState.cs" />
-	<Compile Include="Libraries\Sprite\Player\SamusStates\GameObjects\JumpRightSamusState.cs" />
-	<Compile Include="Libraries\Sprite\Player\SamusStates\GameObjects\LeftIdleSamusState.cs" />
-	<Compile Include="Libraries\Sprite\Player\SamusStates\GameObjects\RightIdleSamusState.cs" />
-	<Compile Include="Libraries\Sprite\Player\SamusStates\GameObjects\LeftWalkSamusState.cs" />
-	<Compile Include="Libraries\Sprite\Player\SamusStates\GameObjects\RightWalkSamusState.cs" />
+    <Compile Include="Libraries\Sprite\Player\SamusStates\GameObjects\JumpLeftSamusState.cs" />
+    <Compile Include="Libraries\Sprite\Player\SamusStates\GameObjects\JumpRightSamusState.cs" />
+    <Compile Include="Libraries\Sprite\Player\SamusStates\GameObjects\LeftIdleSamusState.cs" />
+    <Compile Include="Libraries\Sprite\Player\SamusStates\GameObjects\RightIdleSamusState.cs" />
+    <Compile Include="Libraries\Sprite\Player\SamusStates\GameObjects\LeftWalkSamusState.cs" />
+    <Compile Include="Libraries\Sprite\Player\SamusStates\GameObjects\RightWalkSamusState.cs" />
     <Compile Include="Libraries\CSV\LoadCsv.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
