--- a/Super Metroidvania 3Million/CrossPlatformDesktopProject/Super Metroidvania 5Million.csproj
+++ b/Super Metroidvania 3Million/CrossPlatformDesktopProject/Super Metroidvania 5Million.csproj
@@ -214,6 +214,7 @@
     <Compile Include="Libraries\Sprite\Map\MapInterface.cs" />
     <Compile Include="Libraries\Sprite\Map\MapSprite.cs" />
     <Compile Include="Libraries\Sprite\Player\PlayerInventory.cs" />
+    <Compile Include="Libraries\Sprite\Player\Samus.cs" />
     <Compile Include="Libraries\Sprite\Projectiles\KraidHorn.cs" />
     <Compile Include="Libraries\Sprite\Projectiles\KraidMissile.cs" />
     <Compile Include="Libraries\Sprite\Projectiles\ProjectileSprites\MissileRocketExplosionSprite.cs" />
