--- a/Super Metroidvania 3Million/CrossPlatformDesktopProject/Super Metroidvania 5Million.csproj
+++ b/Super Metroidvania 3Million/CrossPlatformDesktopProject/Super Metroidvania 5Million.csproj
@@ -236,12 +236,16 @@
     <Compile Include="Libraries\Sprite\Player\SamusStates\GameObjects\RightIdleSamusState.cs" />
     <Compile Include="Libraries\Sprite\Player\SamusStates\GameObjects\LeftWalkSamusState.cs" />
     <Compile Include="Libraries\Sprite\Player\SamusStates\GameObjects\RightWalkSamusState.cs" />
+	<Compile Include="Libraries\Sprite\Player\SamusStates\GameObjects\MorphSamusState.cs" />
+	<Compile Include="Libraries\Sprite\Player\SamusStates\GameObjects\AimUpSamusState.cs" />
     <Compile Include="Libraries\Sprite\Player\SamusStates\Sprites\JumpLeftSamusSprite.cs" />
     <Compile Include="Libraries\Sprite\Player\SamusStates\Sprites\JumpRightSamusSprite.cs" />
     <Compile Include="Libraries\Sprite\Player\SamusStates\Sprites\LeftIdleSamusSprite.cs" />
     <Compile Include="Libraries\Sprite\Player\SamusStates\Sprites\RightIdleSamusSprite.cs" />
     <Compile Include="Libraries\Sprite\Player\SamusStates\Sprites\LeftWalkSamusSprite.cs" />
     <Compile Include="Libraries\Sprite\Player\SamusStates\Sprites\RightWalkSamusSprite.cs" />
+	<Compile Include="Libraries\Sprite\Player\SamusStates\Sprites\MorphSamusSprite.cs" />
+	<Compile Include="Libraries\Sprite\Player\SamusStates\Sprites\AimUpSamusSprite.cs" />
     <Compile Include="Libraries\CSV\LoadCsv.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
