--- a/Super Metroidvania 3Million/CrossPlatformDesktopProject/Super Metroidvania 5Million.csproj
+++ b/Super Metroidvania 3Million/CrossPlatformDesktopProject/Super Metroidvania 5Million.csproj
@@ -316,6 +316,7 @@
     </None>
     <None Include="app.manifest" />
     <None Include="Libraries\Levels\LevelOne.csv" />
+    <None Include="Libraries\Levels\LevelTwo.csv" />
     <None Include="Libraries\Levels\StartingLevel.csv" />
   </ItemGroup>
   <ItemGroup>
