--- a/.gitignore
+++ b/.gitignore
@@ -6,4 +6,6 @@
 /.vs/CSE3902Game/v16/Browse.VC.opendb
 /Super Metroidvania 3Million/.vs/Super Metroidvania 5Million/v16
 /.vs/CSE3902Game/v15/Browse.VC.opendb
-/Super Metroidvania 3Million/.vs/Super Metroidvania 5Million/v16/.suo
+
+*.suo
+*.mgcontent
