Put Items in loadcsv and resized all items

--- a/Super Metroidvania 3Million/CrossPlatformDesktopProject/Super Metroidvania 5Million.csproj
+++ b/Super Metroidvania 3Million/CrossPlatformDesktopProject/Super Metroidvania 5Million.csproj
@@ -213,7 +213,7 @@
     <Compile Include="Libraries\Sprite\Items\Sprites\HighJumpItemSprite.cs" />
     <Compile Include="Libraries\Sprite\Items\Sprites\IceBeamItemSprite.cs" />
     <Compile Include="Libraries\Sprite\Items\Sprites\LongBeamItemSprite.cs" />
-    <Compile Include="Libraries\Sprite\Items\Sprites\MissleRocketItemSprite.cs" />
+    <Compile Include="Libraries\Sprite\Items\Sprites\MissileRocketItemSprite.cs" />
     <Compile Include="Libraries\Sprite\Items\Sprites\MorphBallItemSprite.cs" />
     <Compile Include="Libraries\Sprite\Items\Sprites\RocketDropItemSprite.cs" />
     <Compile Include="Libraries\Sprite\Items\Sprites\ScrewAttackItemSprite.cs" />
