--- a/Super Metroidvania 3Million/CrossPlatformDesktopProject/Super Metroidvania 5Million.csproj
+++ b/Super Metroidvania 3Million/CrossPlatformDesktopProject/Super Metroidvania 5Million.csproj
@@ -47,6 +47,8 @@
   <ItemGroup>
     <Compile Include="Libraries\Collision\Collision Detector\CollisionDetector.cs" />
     <Compile Include="Libraries\Collision\Collision Handler\EnemyBlockCollision.cs" />
+    <Compile Include="Libraries\Collision\Collision Handler\ProjectileEnemyCollision.cs" />
+    <Compile Include="Libraries\Collision\Collision Handler\PlayerItemCollision.cs" />
     <Compile Include="Libraries\Collision\Collision Handler\PlayerProjectileCollision.cs" />
     <Compile Include="Libraries\Collision\Collision Handler\PlayerBlockCollision.cs" />
     <Compile Include="Libraries\Collision\Collision Handler\PlayerEnemyCollision.cs" />
