Reduced amount of item sprite classes

--- a/Super Metroidvania 3Million/CrossPlatformDesktopProject/Super Metroidvania 5Million.csproj
+++ b/Super Metroidvania 3Million/CrossPlatformDesktopProject/Super Metroidvania 5Million.csproj
@@ -204,9 +204,6 @@
     <Compile Include="Libraries\Sprite\Enemies\Sprites\MemuSprite.cs" />
     <Compile Include="Libraries\Sprite\IGameObject.cs" />
     <Compile Include="Libraries\Sprite\Items\Game Objects\IItem.cs" />
-    <Compile Include="Libraries\Sprite\Items\Sprites\BombItemSprite.cs" />
-    <Compile Include="Libraries\Sprite\Items\Sprites\EnergyDropItemSprite.cs" />
-    <Compile Include="Libraries\Sprite\Items\Sprites\EnergyTankItemSprite.cs" />
     <Compile Include="Libraries\Sprite\Items\Game Objects\BombItem.cs" />
     <Compile Include="Libraries\Sprite\Items\Game Objects\EnergyDropItem.cs" />
     <Compile Include="Libraries\Sprite\Items\Game Objects\EnergyTankItem.cs" />
@@ -219,15 +216,7 @@
     <Compile Include="Libraries\Sprite\Items\Game Objects\ScrewAttackItem.cs" />
     <Compile Include="Libraries\Sprite\Items\Game Objects\VariaItem.cs" />
     <Compile Include="Libraries\Sprite\Items\Game Objects\WaveBeamItem.cs" />
-    <Compile Include="Libraries\Sprite\Items\Sprites\HighJumpItemSprite.cs" />
-    <Compile Include="Libraries\Sprite\Items\Sprites\IceBeamItemSprite.cs" />
-    <Compile Include="Libraries\Sprite\Items\Sprites\LongBeamItemSprite.cs" />
-    <Compile Include="Libraries\Sprite\Items\Sprites\MissileRocketItemSprite.cs" />
-    <Compile Include="Libraries\Sprite\Items\Sprites\MorphBallItemSprite.cs" />
-    <Compile Include="Libraries\Sprite\Items\Sprites\RocketDropItemSprite.cs" />
-    <Compile Include="Libraries\Sprite\Items\Sprites\ScrewAttackItemSprite.cs" />
-    <Compile Include="Libraries\Sprite\Items\Sprites\VariaItemSprite.cs" />
-    <Compile Include="Libraries\Sprite\Items\Sprites\WaveBeamItemSprite.cs" />
+    <Compile Include="Libraries\Sprite\Items\Sprites\UpgradeItemSprite.cs" />
     <Compile Include="Libraries\Sprite\Map\MapInterface.cs" />
     <Compile Include="Libraries\Sprite\Map\MapSprite.cs" />
     <Compile Include="Libraries\Sprite\Player\PlayerPhysics.cs" />
