--- a/Super Metroidvania 3Million/CrossPlatformDesktopProject/Super Metroidvania 5Million.csproj
+++ b/Super Metroidvania 3Million/CrossPlatformDesktopProject/Super Metroidvania 5Million.csproj
@@ -94,49 +94,7 @@
     <Compile Include="Libraries\SFactory\ProjectilesSpriteFactory.cs" />
     <Compile Include="Libraries\SFactory\EnemySpriteFactory.cs" />
     <Compile Include="Libraries\SFactory\BlockSpriteFactory.cs" />
-    <Compile Include="Libraries\Sprite\Blocks\BlockSprites\BlueBrickBlockSprite.cs" />
-    <Compile Include="Libraries\Sprite\Blocks\BlockSprites\BlueCircleBlockSprite.cs" />
-    <Compile Include="Libraries\Sprite\Blocks\BlockSprites\BlueDoorBottomLeftSprite.cs" />
-    <Compile Include="Libraries\Sprite\Blocks\BlockSprites\BlueDoorBottomRightSprite.cs" />
-    <Compile Include="Libraries\Sprite\Blocks\BlockSprites\BlueDoorMiddleLeftSprite.cs" />
-    <Compile Include="Libraries\Sprite\Blocks\BlockSprites\BlueDoorMiddleRightSprite.cs" />
-    <Compile Include="Libraries\Sprite\Blocks\BlockSprites\BlueDoorTopLeftSprite.cs" />
-    <Compile Include="Libraries\Sprite\Blocks\BlockSprites\BlueDoorTopRightSprite.cs" />
-    <Compile Include="Libraries\Sprite\Blocks\BlockSprites\BlueFenceBlockSprite.cs" />
-    <Compile Include="Libraries\Sprite\Blocks\BlockSprites\BlueMetalBlockSprite.cs" />
-    <Compile Include="Libraries\Sprite\Blocks\BlockSprites\BluePipesBlockSprite.cs" />
-    <Compile Include="Libraries\Sprite\Blocks\BlockSprites\BlueSquareBlockSprite.cs" />
-    <Compile Include="Libraries\Sprite\Blocks\BlockSprites\BushBlockBlueSprite.cs" />
-    <Compile Include="Libraries\Sprite\Blocks\BlockSprites\BushBlockSilverSprite.cs" />
-    <Compile Include="Libraries\Sprite\Blocks\BlockSprites\DualHorizontalBlockStoneSprite.cs" />
-    <Compile Include="Libraries\Sprite\Blocks\BlockSprites\GreenBrickBlockSprite.cs" />
-    <Compile Include="Libraries\Sprite\Blocks\BlockSprites\GreenFenceBlockSprite.cs" />
-    <Compile Include="Libraries\Sprite\Blocks\BlockSprites\GreenPipeBlockSprite.cs" />
-    <Compile Include="Libraries\Sprite\Blocks\BlockSprites\GreenSquareBlockSprite.cs" />
-    <Compile Include="Libraries\Sprite\Blocks\BlockSprites\LavaBlockSprite.cs" />
-    <Compile Include="Libraries\Sprite\Blocks\BlockSprites\LavaBlockTopSprite.cs" />
-    <Compile Include="Libraries\Sprite\Blocks\BlockSprites\LeftStartingPlatformBlockSprite.cs" />
-    <Compile Include="Libraries\Sprite\Blocks\BlockSprites\LightBlueBrickBlockSprite.cs" />
-    <Compile Include="Libraries\Sprite\Blocks\BlockSprites\OrangeDoorBlockSprite.cs" />
-    <Compile Include="Libraries\Sprite\Blocks\BlockSprites\RedCircleBlockSprite.cs" />
-    <Compile Include="Libraries\Sprite\Blocks\BlockSprites\RedCrackedBlockSprite.cs" />
-    <Compile Include="Libraries\Sprite\Blocks\BlockSprites\RedDoorBottomLeftBlockSprite.cs" />
-    <Compile Include="Libraries\Sprite\Blocks\BlockSprites\RedDoorBottomRightBlockSprite.cs" />
-    <Compile Include="Libraries\Sprite\Blocks\BlockSprites\RedDoorMiddleBlockSprite.cs" />
-    <Compile Include="Libraries\Sprite\Blocks\BlockSprites\RedDoorMiddleLeftBlockSprite.cs" />
-    <Compile Include="Libraries\Sprite\Blocks\BlockSprites\RedDoorMiddleRightBlockSprite.cs" />
-    <Compile Include="Libraries\Sprite\Blocks\BlockSprites\RedDoorTopLeftBlockSprite.cs" />
-    <Compile Include="Libraries\Sprite\Blocks\BlockSprites\RedDoorTopRightBlockSprite.cs" />
-    <Compile Include="Libraries\Sprite\Blocks\BlockSprites\RedPipeLeftSprite.cs" />
-    <Compile Include="Libraries\Sprite\Blocks\BlockSprites\RedPipeRightSprite.cs" />
-    <Compile Include="Libraries\Sprite\Blocks\BlockSprites\RightStartingPlatformBlockSprite.cs" />
-    <Compile Include="Libraries\Sprite\Blocks\BlockSprites\RoofSpikeBlockSprite.cs" />
-    <Compile Include="Libraries\Sprite\Blocks\BlockSprites\StockBlockBlueSprite.cs" />
-    <Compile Include="Libraries\Sprite\Blocks\BlockSprites\StockBlockStoneSprite.cs" />
-    <Compile Include="Libraries\Sprite\Blocks\BlockSprites\StoneBlockWithEyesSprite.cs" />
-    <Compile Include="Libraries\Sprite\Blocks\BlockSprites\SwirlBlockBlueSprite.cs" />
-    <Compile Include="Libraries\Sprite\Blocks\BlockSprites\TubeBlockBlueSprite.cs" />
-    <Compile Include="Libraries\Sprite\Blocks\BlockSprites\VerticalTubeStoneBlockSprite.cs" />
+    <Compile Include="Libraries\Sprite\Blocks\BlockSprites\DrawBlockSprites.cs" />
     <Compile Include="Libraries\Sprite\Blocks\BushBlockBlue.cs" />
     <Compile Include="Libraries\Sprite\Blocks\BushBlockSilver.cs" />
     <Compile Include="Libraries\Sprite\Blocks\DualHorizontalBlockStone.cs" />
