--- a/Super Metroidvania 3Million/CrossPlatformDesktopProject/Super Metroidvania 5Million.csproj
+++ b/Super Metroidvania 3Million/CrossPlatformDesktopProject/Super Metroidvania 5Million.csproj
@@ -329,6 +329,7 @@
     <None Include="Libraries\Levels\LevelOne.csv" />
     <None Include="Libraries\Levels\LevelTwo.csv" />
     <None Include="Libraries\Levels\StartingLevel.csv" />
+    <None Include="Libraries\Levels\TestStartingLevelLong.csv" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Code Reviews\Sprint2\Code Quality\AlexQualityReviewWill.txt" />
