--- a/Super Metroidvania 3Million/CrossPlatformDesktopProject/Super Metroidvania 5Million.csproj
+++ b/Super Metroidvania 3Million/CrossPlatformDesktopProject/Super Metroidvania 5Million.csproj
@@ -45,6 +45,10 @@
     <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Libraries\Audio\ISound.cs" />
+    <Compile Include="Libraries\Audio\Sound.cs" />
+    <Compile Include="Libraries\Audio\ProjectileSounds.cs" />
+    <Compile Include="Libraries\Audio\SoundManager.cs" />
     <Compile Include="Libraries\Collision\Collision Detector\CollisionDetector.cs" />
     <Compile Include="Libraries\Collision\Collision Handler\EnemyBlockCollision.cs" />
     <Compile Include="Libraries\Collision\Collision Handler\ProjectileBlockCollision.cs" />
