--- a/Super Metroidvania 3Million/CrossPlatformDesktopProject/Super Metroidvania 5Million.csproj
+++ b/Super Metroidvania 3Million/CrossPlatformDesktopProject/Super Metroidvania 5Million.csproj
@@ -46,7 +46,9 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Libraries\Audio\ISound.cs" />
-    <Compile Include="Libraries\Audio\Sound.cs" />
+    <Compile Include="Libraries\Audio\SongManager.cs" />
+    <Compile Include="Libraries\Audio\SongInstance.cs" />
+    <Compile Include="Libraries\Audio\SoundInstance.cs" />
     <Compile Include="Libraries\Audio\ProjectileSounds.cs" />
     <Compile Include="Libraries\Audio\SoundManager.cs" />
     <Compile Include="Libraries\Collision\Collision Detector\CollisionDetector.cs" />
