--- a/Super Metroidvania 3Million/CrossPlatformDesktopProject/Super Metroidvania 5Million.csproj
+++ b/Super Metroidvania 3Million/CrossPlatformDesktopProject/Super Metroidvania 5Million.csproj
@@ -46,15 +46,15 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Libraries\Audio\ISound.cs" />
-    <Compile Include="Libraries\Audio\EnemyEffects.cs" />
-    <Compile Include="Libraries\Audio\ItemEffects.cs" />
-    <Compile Include="Libraries\Audio\BlockEffects.cs" />
-    <Compile Include="Libraries\Audio\MiscEffects.cs" />
-    <Compile Include="Libraries\Audio\PlayerEffects.cs" />
-    <Compile Include="Libraries\Audio\SongManager.cs" />
-    <Compile Include="Libraries\Audio\SongInstance.cs" />
-    <Compile Include="Libraries\Audio\EffectInstance.cs" />
-    <Compile Include="Libraries\Audio\ProjectileEffects.cs" />
+    <Compile Include="Libraries\Audio\Effects\EnemyEffects.cs" />
+    <Compile Include="Libraries\Audio\Effects\ItemEffects.cs" />
+    <Compile Include="Libraries\Audio\Effects\BlockEffects.cs" />
+    <Compile Include="Libraries\Audio\Effects\MiscEffects.cs" />
+    <Compile Include="Libraries\Audio\Effects\PlayerEffects.cs" />
+    <Compile Include="Libraries\Audio\Songs\SongManager.cs" />
+    <Compile Include="Libraries\Audio\Songs\SongInstance.cs" />
+    <Compile Include="Libraries\Audio\Effects\EffectInstance.cs" />
+    <Compile Include="Libraries\Audio\Effects\ProjectileEffects.cs" />
     <Compile Include="Libraries\Audio\SoundManager.cs" />
     <Compile Include="Libraries\Collision\Collision Detector\CollisionDetector.cs" />
     <Compile Include="Libraries\Collision\Collision Handler\EnemyBlockCollision.cs" />
