--- a/Super Metroidvania 3Million/CrossPlatformDesktopProject/Super Metroidvania 5Million.csproj
+++ b/Super Metroidvania 3Million/CrossPlatformDesktopProject/Super Metroidvania 5Million.csproj
@@ -121,6 +121,10 @@
     <Compile Include="Libraries\CSV\Object Generators\ItemObjectGenerator.cs" />
     <Compile Include="Libraries\GameStates\GameStateMachine.cs" />
     <Compile Include="Libraries\GameStates\IGameState.cs" />
+    <Compile Include="Libraries\GameStates\States\GameOverState.cs" />
+    <Compile Include="Libraries\GameStates\States\GameWinState.cs" />
+    <Compile Include="Libraries\GameStates\States\ItemUpgradeSelectionState.cs" />
+    <Compile Include="Libraries\GameStates\States\RoomTransitionState.cs" />
     <Compile Include="Libraries\GameStates\States\PlayingState.cs" />
     <Compile Include="Libraries\GameStates\States\PausedState.cs" />
     <Compile Include="Libraries\SFactory\GOFactory\ProjectilesGOFactory.cs" />
