--- a/Super Metroidvania 3Million/CrossPlatformDesktopProject/Super Metroidvania 5Million.csproj
+++ b/Super Metroidvania 3Million/CrossPlatformDesktopProject/Super Metroidvania 5Million.csproj
@@ -85,7 +85,6 @@
     <Compile Include="Libraries\Command\AudioCommands\PlayNextThemeCommand.cs" />
     <Compile Include="Libraries\Command\CycleLevelCommand.cs" />
     <Compile Include="Libraries\Command\EnemyFreezeCommand.cs" />
-    <Compile Include="Libraries\Command\Game State Commands\GameOverCommand.cs" />
     <Compile Include="Libraries\Command\Game State Commands\UnpauseGameCommand.cs" />
     <Compile Include="Libraries\Command\Game State Commands\PauseGameCommand.cs" />
     <Compile Include="Libraries\Command\ICameraCommand.cs" />
@@ -326,6 +325,7 @@
     </None>
     <None Include="app.manifest" />
     <None Include="Libraries\Levels\KraidDungeon.csv" />
+    <None Include="Libraries\Levels\KraidDungeonSample.csv" />
     <None Include="Libraries\Levels\LevelOne.csv" />
     <None Include="Libraries\Levels\LevelTwo.csv" />
     <None Include="Libraries\Levels\StartingLevel.csv" />
