--- a/Super Metroidvania 3Million/CrossPlatformDesktopProject/Super Metroidvania 5Million.csproj
+++ b/Super Metroidvania 3Million/CrossPlatformDesktopProject/Super Metroidvania 5Million.csproj
@@ -324,6 +324,7 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="app.manifest" />
+    <None Include="BurndownCharts\sprint4_burndown_chart.xlsx" />
     <None Include="Code Reviews\Sprint4\Sprint 4 Reflection.pdf" />
     <None Include="Libraries\Levels\KraidDungeon.csv" />
     <None Include="Libraries\Levels\KraidDungeonSample.csv" />
@@ -356,8 +357,10 @@
     <Content Include="Code Reviews\Sprint3\Code Readability\DannyReadabilityReviewNyigel.txt" />
     <Content Include="Code Reviews\Sprint3\Code Readability\WillReadabilityReviewDanny.txt" />
     <Content Include="Code Reviews\Sprint4\Code Quality\AlexQualityReviewWillSPrint4.txt" />
+    <Content Include="Code Reviews\Sprint4\Code Quality\TristanQualityReviewAlex.txt" />
     <Content Include="Code Reviews\Sprint4\Code Quality\WillQualityReviewDanny.txt" />
     <Content Include="Code Reviews\Sprint4\Code Readability\AlexReadabilityReviewWillSprint4.txt" />
+    <Content Include="Code Reviews\Sprint4\Code Readability\TristanReadabilityReviewAlex.txt" />
     <Content Include="Code Reviews\Sprint4\Code Readability\WillReadabilityReviewDanny.txt" />
   </ItemGroup>
   <ItemGroup>
