--- a/Super Metroidvania 3Million/CrossPlatformDesktopProject/Super Metroidvania 5Million.csproj
+++ b/Super Metroidvania 3Million/CrossPlatformDesktopProject/Super Metroidvania 5Million.csproj
@@ -113,11 +113,19 @@
     <Compile Include="Libraries\Container\InfoContainer\MiscUtilities.cs" />
     <Compile Include="Libraries\Container\InfoContainer\InfoContainer.cs" />
     <Compile Include="Libraries\Controller\KeyboardController.cs" />
-    <Compile Include="Libraries\CSV\Level Classes\LevelTwo.cs" />
-    <Compile Include="Libraries\CSV\Level Classes\LevelOne.cs" />
+    <Compile Include="Libraries\CSV\LevelClasses\KraidDungeon1.cs" />
+    <Compile Include="Libraries\CSV\LevelClasses\KraidDungeon2.cs" />
+    <Compile Include="Libraries\CSV\LevelClasses\KraidDungeon3.cs" />
+    <Compile Include="Libraries\CSV\LevelClasses\KraidDungeon4.cs" />
+    <Compile Include="Libraries\CSV\LevelClasses\KraidDungeon5.cs" />
+    <Compile Include="Libraries\CSV\LevelClasses\KraidDungeon6.cs" />
+    <Compile Include="Libraries\CSV\LevelClasses\KraidDungeon7.cs" />
+    <Compile Include="Libraries\CSV\LevelClasses\KraidDungeon8.cs" />
+    <Compile Include="Libraries\CSV\LevelClasses\LevelOne.cs" />
+    <Compile Include="Libraries\CSV\LevelClasses\LevelTwo.cs" />
+    <Compile Include="Libraries\CSV\LevelClasses\StartingLevel.cs" />
     <Compile Include="Libraries\CSV\LevelStatePattern.cs" />
     <Compile Include="Libraries\CSV\IStageState.cs" />
-    <Compile Include="Libraries\CSV\Level Classes\StartingLevel.cs" />
     <Compile Include="Libraries\CSV\Object Generators\SwitchObjectGenerator.cs" />
     <Compile Include="Libraries\CSV\Object Generators\EnemyObjectGenerator.cs" />
     <Compile Include="Libraries\CSV\Object Generators\ItemObjectGenerator.cs" />
@@ -256,7 +264,7 @@
     <Compile Include="Libraries\GameObjects\Player\SamusStates\Sprites\LeftWalkSamusSprite.cs" />
     <Compile Include="Libraries\GameObjects\Player\SamusStates\Sprites\RightWalkSamusSprite.cs" />
     <Compile Include="Libraries\GameObjects\Player\SamusStates\Sprites\MorphAnimationSamusSprite.cs" />
-	<Compile Include="Libraries\GameObjects\Player\SamusStates\Sprites\MorphDoneAnimationSamusSprite.cs" />
+    <Compile Include="Libraries\GameObjects\Player\SamusStates\Sprites\MorphDoneAnimationSamusSprite.cs" />
     <Compile Include="Libraries\CSV\LoadCsv.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
